--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -394,9 +394,9 @@ watchers:
       - ^0\.[0-1]\..*
   - type: docker_registry
     name: Gandi LiveDNS Base image
-    repo: {{ _gandi_livedns_var_loader.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ _gandi_livedns_var_loader.base_image.name }}
-    tag: {{ _gandi_livedns_var_loader.base_image.tag }}
+    repo: registry-1.docker.io
+    image: library/alpine
+    tag: 3.17.3
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
     excludes:
