--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -507,9 +507,9 @@ watchers:
       - 1[0-8]\..*
       - 19\.[0-7]\..*
   - type: docker_registry
-    repo: {{ intel_gpu_plugin.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ intel_gpu_plugin.base_image.name }}
-    tag: {{ intel_gpu_plugin.base_image.tag }}
+    repo: registry-1.docker.io
+    image: intel/intel-gpu-plugin
+    tag: 0.26.0
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+"
     excludes:
