Migrate infra-kubernetes-dashboard to kustomize

--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -330,7 +330,7 @@ watchers:
       - v0\.[0-5]\..*
   - type: github_release
     repo: kubernetes/dashboard
-    release: {{ kubernetes_dashboard.base_image.tag }}
+    release: v2.7.0
     excludes:
       - .*beta.*
       - .*rc.*
