Migrate infra-kubernetes-metrics-server to kustomize

--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -322,7 +322,7 @@ watchers:
 
   - type: github_release
     repo: kubernetes-sigs/metrics-server
-    release: {{ kubernetes_metrics_server.base_image.tag }}
+    release: v0.6.3
     includes:
       - v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
