Migrate infra-mailhog to kustomize

--- a/ansible/install_applications/roles/infra_ntfy_deploy/app/deploy/ntfy-alertmanager-secret.yaml.j2
+++ b/ansible/install_applications/roles/infra_ntfy_deploy/app/deploy/ntfy-alertmanager-secret.yaml.j2
@@ -4,8 +4,8 @@ metadata:
   name: ntfy-alertmanager-config
   namespace: {{ ntfy.namespace }}
   labels:
-    {{ mailhog.labels_def | to_nice_yaml() | indent(4) }}
-    {{ mailhog.labels_desc | to_nice_yaml() | indent(4) }}
+    {{ ntfy_alertmanager.labels_def | to_nice_yaml() | indent(4) }}
+    {{ ntfy_alertmanager.labels_desc | to_nice_yaml() | indent(4) }}
 type: Opaque
 data:
   config.scfg: {{ lookup('template', role_path + '/app/config/alertmanager-config.scfg.j2', convert_data=False) | b64encode }}
