--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -376,18 +376,18 @@ watchers:
       - ^[0-6]\.
       - ^7\.0\.[0-7]-.*
   - type: docker_registry
-    repo: {{ ntfy.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ ntfy.base_image.name }}
-    tag: {{ ntfy.base_image.tag }}
+    repo: registry-1.docker.io
+    image: binwiederhier/ntfy
+    tag: v2.3.1-amd64
     includes:
       - v[0-9]+\.[0-9]+\.[0-9]+-amd64
     excludes:
       - ^v[0-1]\..*
       - ^v2\.[0-2]\..*
   - type: docker_registry
-    repo: {{ ntfy_alertmanager.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ ntfy_alertmanager.base_image.name }}
-    tag: {{ ntfy_alertmanager.base_image.tag }}
+    repo: registry-1.docker.io
+    image: xenrox/ntfy-alertmanager
+    tag: 0.2.0
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
