--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -443,9 +443,9 @@ watchers:
       - 2\.[0-7]\.
       - 2\.8\.[0]$
   - type: docker_registry
-    repo: {{ reloader.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ reloader.base_image.name }}
-    tag: {{ reloader.base_image.tag }}
+    repo: registry-1.docker.io
+    image: stakater/reloader
+    tag: v1.0.18
     includes:
       - v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
