--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -455,9 +455,9 @@ watchers:
       - v0\.
       - v1\.0\.[0-9]$
   - type: docker_registry
-    repo: {{ unifi.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ unifi.base_image.name }}
-    tag: {{ unifi.base_image.tag }}
+    repo: registry-1.docker.io
+    image: jacobalberty/unifi
+    tag: v7.3.83
     includes:
       - "^v?[0-9]+\\.[0-9]+\\.[0-9]+$"
     excludes:
