--- a/ansible/install_applications/roles/logging_kibana_deploy/app/config/opensearch_dashboards.yml.j2
+++ b/ansible/install_applications/roles/logging_kibana_deploy/app/config/opensearch_dashboards.yml.j2
@@ -34,7 +34,7 @@ server.rewriteBasePath: true
 server.name: OpenSearch Dashboards
 
 # The URLs of the OpenSearch instances to use for all your queries.
-opensearch.hosts: [ "https://{{ elasticsearch.servername }}:9200" ]
+opensearch.hosts: [ "https://elasticsearch.logging-elasticsearch.svc.cluster.local:9200" ]
 
 # OpenSearch Dashboards uses an index in OpenSearch to store saved searches, visualizations and
 # dashboards. OpenSearch Dashboards creates a new index if the index doesn't already exist.
