--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -521,9 +521,9 @@ watchers:
   # Apps : Logging #
   ##################
   - type: docker_registry
-    repo: {{ elasticsearch.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ elasticsearch.base_image.name }}
-    tag: {{ elasticsearch.base_image.tag }}
+    repo: registry-1.docker.io
+    image: opensearchproject/opensearch
+    tag: 2.6.0
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
     excludes:
@@ -533,9 +533,9 @@ watchers:
       - ^1\..*
       - ^2\.[0-5]\..*
   - type: docker_registry
-    repo: {{ elasticsearch_exporter.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ elasticsearch_exporter.base_image.name }}
-    tag: {{ elasticsearch_exporter.base_image.tag }}
+    repo: registry-1.docker.io
+    image: justwatch/elasticsearch_exporter
+    tag: 1.1.0
     excludes:
       - latest
       - ^0\..*
