--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -542,9 +542,9 @@ watchers:
       - ^1\.0\..*
       - .*rc.*
   - type: docker_registry
-    repo: {{ fluentbit.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ fluentbit.base_image.name }}
-    tag: {{ fluentbit.base_image.tag }}
+    repo: registry-1.docker.io
+    image: fluent/fluent-bit
+    tag: 2.0.9
     includes:
       - "[1-9]\\.[0-9]+\\.[0-9].*"
     excludes:
