--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -598,9 +598,9 @@ watchers:
     excludes:
       - v0\..*
   - type: docker_registry
-    repo: {{ kibana.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ kibana.base_image.name }}
-    tag: {{ kibana.base_image.tag }}
+    repo: registry-1.docker.io
+    image: opensearchproject/opensearch-dashboards
+    tag: 2.6.0
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
     excludes:
