--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -709,9 +709,9 @@ watchers:
       - ^v0\.6\.[0-9]
   - name: Miniflux
     type: docker_registry
-    repo: {{ miniflux.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ miniflux.base_image.name }}
-    tag: {{ miniflux.base_image.tag }}
+    repo: ghcr.io
+    image: miniflux/miniflux
+    tag: 2.0.43-distroless
     includes:
       - ^[0-9]+.[0-9]+.[0-9]+-distroless$
     excludes:
@@ -721,9 +721,9 @@ watchers:
       - ^2.0.4[0-2]-distroless$
   - name: Miniflux PostgreSQL
     type: docker_registry
-    repo: {{ miniflux_pgsql.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ miniflux_pgsql.base_image.name }}
-    tag: {{ miniflux_pgsql.base_image.tag }}
+    repo: registry-1.docker.io
+    image: library/postgres
+    tag: 15.2-alpine3.17
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
@@ -732,9 +732,9 @@ watchers:
       - ^1[0-4]\..*
   - name: "Reminiflux Node"
     type: docker_registry
-    repo: {{ miniflux_reminiflux.base_builder_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ miniflux_reminiflux.base_builder_image.name }}
-    tag: {{ miniflux_reminiflux.base_builder_image.tag }}
+    repo: registry-1.docker.io
+    image: library/node
+    tag: 19.8.1-alpine3.17
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
@@ -743,9 +743,9 @@ watchers:
       - 19\.[0-5]\..*
   - name: "Reminiflux Nginx"
     type: docker_registry
-    repo: {{ miniflux_reminiflux.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ miniflux_reminiflux.base_image.name }}
-    tag: {{ miniflux_reminiflux.base_image.tag }}
+    repo: registry-1.docker.io
+    image: library/nginx
+    tag: 1.23.4-alpine
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine$
     excludes:
