--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -874,9 +874,9 @@ watchers:
       - ^2023-0[0-2].*
   - name: Syncthing
     type: docker_registry
-    repo: {{ _syncthing_var_loader.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ _syncthing_var_loader.base_image.name }}
-    tag: {{ _syncthing_var_loader.base_image.tag }}
+    repo: registry-1.docker.io
+    image: syncthing/syncthing
+    tag: 1.23.2
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
@@ -885,9 +885,9 @@ watchers:
       - ^1\.2[0-2]\.
   - name: Syncthing conf injection
     type: docker_registry
-    repo: {{ _syncthing_var_loader.conf_injection_base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ _syncthing_var_loader.conf_injection_base_image.name }}
-    tag: {{ _syncthing_var_loader.conf_injection_base_image.tag }}
+    repo: registry-1.docker.io
+    image: library/python
+    tag: 3.11.2-alpine3.17
     includes:
       - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
@@ -897,9 +897,9 @@ watchers:
       - 3\.1[0]\..*
   - name: Syncthing Discovery
     type: docker_registry
-    repo: {{ _syncthing_discovery_var_loader.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ _syncthing_discovery_var_loader.base_image.name }}
-    tag: {{ _syncthing_discovery_var_loader.base_image.tag }}
+    repo: registry-1.docker.io
+    image: syncthing/discosrv
+    tag: 1.18.6
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
