--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -641,7 +641,7 @@ watchers:
   - type: github_commit
     repo: mdlayher/apcupsd_exporter
     branch: main
-    commit: {{ apcups_exporter.repo.version }}
+    commit: 3f531e59fc85ebd86ce9806a1336818c5db18bcb
 
 
   #################
