--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/nginx-exporter.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/nginx-exporter.yaml.j2
@@ -2,8 +2,8 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    {{ nginx_exporter.labels_def | to_nice_yaml() | indent(4) }}
-    {{ nginx_exporter.labels_desc | to_nice_yaml() | indent(4) }}
+    app.kubernetes.io/name: nginx-exporter
+    app.kubernetes.io/component: nginx-exporter
   name: nginx-exporter
   namespace: {{ prometheus.namespace }}
 spec:
@@ -21,7 +21,7 @@ spec:
       targetLabel: instance
   namespaceSelector:
     matchNames:
-    - {{ nginx_exporter.namespace }}
+    - monitoring-nginx-exporter
   selector:
     matchLabels:
       prometheus-target: nginx-exporter
