--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -618,9 +618,9 @@ watchers:
     branch: main
     commit: b076db6e884885fe96db2283cfce680a0145de47
   - type: docker_registry
-    repo: {{ nginx_exporter.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ nginx_exporter.base_image.name }}
-    tag: {{ nginx_exporter.base_image.tag }}
+    repo: registry-1.docker.io
+    image: nginx/nginx-prometheus-exporter
+    tag: 0.11.0
     includes:
       - ^[0-9]+\.[0-9]+.[0-9]+
     excludes:
