--- a/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_release_watcher_deploy/app/config/watchers.yaml.j2
@@ -627,9 +627,9 @@ watchers:
       - ^0\.[0-9]\..*
       - ^0\.1[0]\..*
   - type: docker_registry
-    repo: {{ nginx_log_exporter.base_image.repo | regex_replace('^docker.io$', 'registry-1.docker.io') | default('registry-1.docker.io') }}
-    image: {{ nginx_log_exporter.base_image.name }}
-    tag: {{ nginx_log_exporter.base_image.tag }}
+    repo: quay.io
+    image: martinhelmich/prometheus-nginxlog-exporter
+    tag: v1.10.0-amd64
     includes:
       - ^v[0-9]+\.[0-9]+.[0-9]+-amd64
     excludes:
