--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/node-exporter.yaml.j2
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/deploy/service-monitors/node-exporter.yaml.j2
@@ -2,8 +2,8 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    {{ node_exporter.labels_def | to_nice_yaml() | indent(4) }}
-    {{ node_exporter.labels_desc | to_nice_yaml() | indent(4) }}
+    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/component: node-exporter
   name: node-exporter
   namespace: {{ prometheus.namespace }}
 spec:
@@ -24,7 +24,7 @@ spec:
   jobLabel: app.kubernetes.io/name
   namespaceSelector:
     matchNames:
-    - {{ node_exporter.namespace }}
+    - monitoring-node-exporter
   selector:
     matchLabels:
       prometheus-target: node-exporter
