Configure pod-security for cluster-secrets

--- a/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/namespace.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes_secrets_deploy/templates/namespace.yaml.j2
@@ -2,4 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: cluster-secrets
-
+  labels:
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/audit: restricted
+    pod-security.kubernetes.io/warn: restricted
