--- a/ansible/install_infra/roles/backup_restic/templates/_restic.sh.j2
+++ b/ansible/install_infra/roles/backup_restic/templates/_restic.sh.j2
@@ -6,7 +6,7 @@ function init_repo_if_necessary() {
     echo ""
     echo "Testing if the repository already exists : ${RESTIC_REPOSITORY}"
 
-    {{ restic_bin_path }} snapshots --last
+    {{ restic_bin_path }} snapshots --latest 1
     restic_repo_status=$?
 
     if [ $restic_repo_status -eq 0 ] ; then
