chore(ansible): Bump ansible to 12.2.0
Also bump dependencies:
- bcrypt to 5.0.0
- python-ldap to 3.4.5

--- a/ansible/install_infra/roles/nginx/templates/streams.j2
+++ b/ansible/install_infra/roles/nginx/templates/streams.j2
@@ -1,4 +1,4 @@
-#jinja2: trim_blocks: "true", lstrip_blocks: "false"
+#jinja2: lstrip_blocks: True
 # {{ ansible_managed }}
 
 {% if item.tcp_port | default(False) or item.udp_port | default(False) %}
