--- a/ansible/install_infra/roles/nginx/templates/sites.j2
+++ b/ansible/install_infra/roles/nginx/templates/sites.j2
@@ -1,4 +1,4 @@
-#jinja2: trim_blocks: "true", lstrip_blocks: "false"
+#jinja2: lstrip_blocks: True
 # {{ ansible_managed }}
 
 {% if item.http_port | default(False) %}
